# ublox_driver

./: CMakeLists.txt  package.xml
config/: driver_config.yaml
include/ublox_driver/: parameter_manager.hpp  serial_handler.hpp  socket_handler.hpp  ublox_message_processor.hpp
launch/: ublox_driver.launch.py
src/: serial_handler.cpp  socket_handler.cpp  sync_system_time.cpp  ublox_driver.cpp  ublox_message_processor.cpp
