<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>ublox_driver</name>
  <version>1.0.0</version>
  <description>A driver for u-blox receiver (ZED-F9P) with ros support</description>

  <maintainer email="shaozu.cao@gmail.com">CAO Shaozu</maintainer>

  <license>GPLv3</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>gnss_comm</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
